# PathfindingProject

./: CMakeLists.txt
Cmake - SFML - PathFinding/: .gitignore  CMakeLists.txt  ReadMe.txt  cmaker.py
Cmake - SFML - PathFinding/App/: CMakeLists.txt
Cmake - SFML - PathFinding/App/src/: main.cpp
Cmake - SFML - PathFinding/Engine/: CMakeLists.txt
Cmake - SFML - PathFinding/Engine/GameManager/: IGameManager.cpp  IGameManager.h
Cmake - SFML - PathFinding/Engine/Gameplay/Actor/: Actor.cpp  Actor.h
Cmake - SFML - PathFinding/Engine/Gameplay/Actor/Alien/: Alien.cpp  Alien.h  AlienLaser.cpp  AlienLaser.h
Cmake - SFML - PathFinding/Engine/Gameplay/Actor/PlayerShip/: PlayerLaser.cpp  PlayerLaser.h  PlayerShip.cpp  PlayerShip.h
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/: GameObject.cpp  GameObject.h  GameObject.hxx
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Actor/: Actor.cpp  Actor.h
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Actor/PlayerShip/: PlayerShip.cpp  PlayerShip.h
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Component/: IComponent.cpp  IComponent.h
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Component/Collider/: BoxCollider.cpp  BoxCollider.h  ICollider.cpp  ICollider.h
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Component/Renderer/: Renderer.cpp  Renderer.h  Renderer.hxx
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Component/Transform/: Transform.cpp  Transform.h
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Graph/: Graph.cpp  Graph.h
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Graph/Cell/: Cell.cpp  Cell.h
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Graph/Line/: Line.cpp  Line.h
Cmake - SFML - PathFinding/Engine/Gameplay/GameObject/Graph/PathFinder/: Dijkstra.cpp  Dijkstra.h  WayPoint.cpp  WayPoint.h
Cmake - SFML - PathFinding/Engine/Math/Random/: RandomNumber.cpp  RandomNumber.h
Cmake - SFML - PathFinding/Engine/Math/Vector/: Vector.cpp  Vector.h
Cmake - SFML - PathFinding/Engine/Render/: Window.cpp  Window.h
Cmake - SFML - PathFinding/Engine/Render/Drawable/: IDrawable.cpp  IDrawable.h
Cmake - SFML - PathFinding/Engine/Render/Drawable/Sprite/: Sprite.cpp  Sprite.h
Cmake - SFML - PathFinding/Engine/Render/Ressource/: TextureManager.cpp  TextureManager.h
Cmake - SFML - PathFinding/Engine/Render/UIElements/: UIElement.cpp  UIElement.h
Cmake - SFML - PathFinding/Engine/Render/UIElements/Button/: Button.cpp  Button.h
Cmake - SFML - PathFinding/Engine/Render/UIElements/Text/: Text.cpp  Text.h
Cmake - SFML - PathFinding/Engine/Scene/: IScene.cpp  IScene.h
Cmake - SFML - PathFinding/Engine/Scene/Level/: Level01.cpp  Level01.h  Level02.cpp  Level02.h  LevelCustom.cpp  LevelCustom.h  LevelGraph.cpp  LevelGraph.h  MainMenu.cpp  MainMenu.h
Cmake - SFML - PathFinding/Engine/System/Input/: InputManager.cpp  InputManager.h
Cmake - SFML - PathFinding/Ressources/Ennemies/: Alien.xml
Cmake - SFML - PathFinding/Ressources/PlayerShip/: PlayerShip.xml  lancepierre.xml
Cmake - SFML - PathFinding/Ressources/Saves/: CustomLevelSave.xml
Cmake - SFML - PathFinding/Ressources/Weapons/: Laser.xml
Cmake - SFML - PathFinding/Toto/: CMakeLists.txt  Toto.cpp  Toto.h
Cmake - SFML - PathFinding/Toto/AnotherToto/: AnotherToto.cpp  AnotherToto.h
Dijsktra/StrategryPattern/: StrategryPattern.sln
Dijsktra/StrategryPattern/StrategryPattern/: Main.cpp  MainHeros.cpp  StrategryPattern.vcxproj  StrategryPattern.vcxproj.filters  Vector3D.h  Vector3D.hxx
Dijsktra/StrategryPattern/StrategryPattern/Engine/Component/: Component.cpp  Component.h
Dijsktra/StrategryPattern/StrategryPattern/Heros/: Heros.cpp  Heros.h  Item.cpp  Item.h  TypeHero.h  TypeWeapon.h  Weapon.cpp  Weapon.h
Dijsktra/StrategryPattern/StrategryPattern/Heros/Magician/: Magician.cpp  Magician.h
Dijsktra/StrategryPattern/StrategryPattern/Heros/Thief/: Thief.cpp  Thief.h
Dijsktra/StrategryPattern/StrategryPattern/Heros/Warrior/: Warrior.cpp  Warrior.h
Dijsktra/StrategryPattern/StrategryPattern/Math/: Dijkstra.cpp  PathfindingAlgorithm.cpp  PathfindingAlgorithm.h  WayPoint.h
Dijsktra/StrategryPattern/StrategryPattern/x64/Debug/: StrategryPattern.exe.recipe  StrategryPattern.ilk  vc143.idb
Dijsktra/StrategryPattern/StrategryPattern/x64/Debug/StrategryPattern.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  StrategryPattern.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PathFindingProject/: CMakeLists.txt  PathFindingProject.cpp  PathFindingProject.h
